deploy/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: golang-gin-demo
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: golang-gin-demo
  type: ClusterIP
